--- a/source/partials/head/_tags.erb
+++ b/source/partials/head/_tags.erb
@@ -2,6 +2,7 @@
 <meta http-equiv="x-ua-compatible" content="ie=edge">
 <meta name="viewport" content="width=device-width,initial-scale=1.0">
 <title><%= current_page.data.title %></title>
+<branch data-branch="deploy-test"></branch>
 <meta name="description" content="<%= current_page.data.summary %>">
 <% if current_page.data.has_key?("hide_from_sitemap") %>
     <meta name="robots" content="noindex,nofollow,noodp">
