--- a/source/emissary/index.html.slim
+++ b/source/emissary/index.html.slim
@@ -35,27 +35,27 @@ product_benefits:
   -
     title: "Save time"
     desc: "Customers implement 80% faster, dramatically reducing the burden on IT staff."
-    icon: 
+    icon: https://images.ctfassets.net/189dvqdsjh46/2kUIf9U14ViIVZ18Cg183w/5f3278e5c22f1cba3fbbe4438605980c/emissary-save-time.svg
   -
     title: "Slash costs"
     desc: "Cut integration efforts by as much as 75%."
-    icon: 
+    icon: https://images.ctfassets.net/189dvqdsjh46/38dREQgKjAsDK2LSEoRFGZ/4febb59c8c74615918f008f797ddc848/emissary-cut-costs.svg
   -
     title: "Streamline processes"
     desc: "Automate workflows for maximum efficiency."
-    icon: 
+    icon: https://images.ctfassets.net/189dvqdsjh46/4DTnYLpyjmMJ7XbrqiCqUq/3173383c81408b869f59a85bb0eff356/emissary-streamline-process.svg
   -
     title: "Support any platform"
     desc: "Scale rapidly with turnkey integration across EHRs."
-    icon: 
+    icon: https://images.ctfassets.net/189dvqdsjh46/2s2Jp1i21g7UDL5EQmIb2D/acb22435722172bf52b3d307ec142645/emissary-puzzle-solve.svg
   -
     title: "Secure data"
     desc: "Protect real-time data exchange with advanced authentication and encryption."
-    icon: 
+    icon: https://images.ctfassets.net/189dvqdsjh46/1hp1CiNH5dlMVOLmc3Iy3Q/7d76359059c0883e4b20e786e2fa1bd0/emissary-secure-data.svg
   -
     title: "Solve problems"
     desc: "Deliver the right information to the right person in the best possible application."
-    icon: 
+    icon: https://images.ctfassets.net/189dvqdsjh46/qoGRlQEGS3z0N7X5uvS9k/99fc671aca519eab06b2b1d608131453/emissary-solve-problems.svg
 ---
 ruby:
   bg_image = 'https://images.ctfassets.net/189dvqdsjh46/71ZkJFY8CgC3a0huhg9Wqh/19a52b2852b0f336e0c51d8acfcc8e85/bg-cards.svg'
@@ -136,7 +136,7 @@ section.section-article.bg-gray-12 id=current_page.data.subnav[2].slug data-mage
           .column.group--sm
             .media-object
               .media-object-section.media-object--avatar
-                  img.icon-size--large src=loader_disc
+                  img.icon-size--large.lozad src=loader_disc data-src=item.icon
               .media-object-section.media-object--info.main-section.align-self-middle
                 h4.headline-4.margin-bottom-small = item.title
                 p = item.desc
