Updating share images, featured image on press

--- a/source/leadership/index.html.slim
+++ b/source/leadership/index.html.slim
@@ -3,11 +3,11 @@ title: "Datica Leadership Team"
 summary: "The leadership team behind Datica"
 author: "Datica, Inc."
 tags: "leadership, strategy, people"
-share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
 # customCSS: "leadership"
 layout: company
 ---
 ruby:
+  current_page.data.share_image = image_share_default
   # datica_execs = data.site.person.to_a.select { |id, person| person["person_type"] == "Datica Executives" }
   # datica_vps = data.site.person.to_a.select { |id, person| person["person_type"] == "Datica VP" }
   # datica_directors = data.site.person.to_a.select { |id, person| person["person_type"] == "Datica Directors" }
