--- a/source/press/index.html.erb
+++ b/source/press/index.html.erb
@@ -4,18 +4,18 @@ summary: "Datica press releases, announcements, media coverage, and contact info
 author: "Datica, Inc."
 tags: "media, press releases, press, HIPAA, HL7, FHIR, interoperability, EHR, integration"
 date: "January 1, 2017"
-share_image: "https://images.ctfassets.net/189dvqdsjh46/3Ll0a3gLi8wKG8A84mUokm/fabae03bd9e4da4e60173d4c2fe89a30/blog-share-default.png"
+share_image: "https://images.ctfassets.net/189dvqdsjh46/1MVnqehr451jj65tCOGI6L/d03c5883d2379a2c07cc2939400c3b57/section-press.jpg"
 header: "Media Resources"
 subheader: "Company Info, Press Releases, Coverage"
 layout: company
 feed_url: "https://datica.com/press/feed.xml"
 ---
 
-<section class="section-article container-color--dark container-image--fixed" data-interchange="[https://images.ctfassets.net/189dvqdsjh46/3zZ0FS37NuWEagqyQuoowQ/700afbf86e486e4d251bf816448719e7/background-press.jpg, small]">
+<section class="section-article container-color--dark container-image-fill lozad" data-background-image="https://images.ctfassets.net/189dvqdsjh46/31Yx0Zx883Ehwkmp6n9LYp/c241797662851856122dbff94daa4ab0/guide-integrations-hosp-bg.jpg?fit=thumb&w=1600&h=400">
     <div class="row align-center">
         <div class="columns small-12 large-6 text-center">
             <h4 class="headline-6 subheader--spaced-out text--yellow-glow">Press</h4>
-            <h1 class="headline-3">Media Resources: Company Info, Press Releases, Coverage</h1>
+            <h1 class="headline-3">Company Info, Press Releases, & Media Coverage</h1>
         </div>
     </div>
 </section>
