--- a/source/emissary/index.html.slim
+++ b/source/emissary/index.html.slim
@@ -89,7 +89,7 @@ section.masthead.bg-dark.bg-greens-grad.product-cmi.relative id=current_page.dat
           .media-object-section
             = inline_svg("emissary-icon-large-white", class: "masthead-icon")
           .media-object-section.media-object--info.main-section.align-self-middle
-            h1.headline-2 style="margin-bottom: 0.2rem;" Emissary®
+            h1.headline-2 style="margin-bottom: 0.2rem;" Emissary<sup>®</sup>
             p.lead A scalable, centralized API for clinical data of any type
             = partial "partials/snippets/button", :locals => { :label => "Schedule A Demo", :url => "##{current_page.data.subnav.last.slug}", :button_classes => "button button--light nomargin step-2", :data_track_group => "compliance", :item_id => "get-ccms-mobile", :icon => "icon-chevron-down", :icon_align => "right", :expand => "false" }
   .art
