--- a/source/assets/scss/print/print.scss
+++ b/source/assets/scss/print/print.scss
@@ -3,112 +3,182 @@
 @import '../settings';
 @import '../mixins/functions';
 /* This defines styles and classes used in the EPUB and MOBI versions of the book */
-body { 
-  margin: 4%; 
-  text-align: justify; 
-  font-size: medium;
-  font-family: $font_sans;
-}
-code { 
-  font-family: monospace; 
-}
+@media print {
+  body { 
+    margin: 4%; 
+    text-align: justify; 
+    font-size: medium;
+    font-family: $font_sans;
+    line-height: 1.3;
+    background: #fff !important;
+    color: #000;
+  }
+  code { 
+    font-family: monospace; 
+  }
 
-h1.title, h2.author, h3.date { 
-  text-align: center;
-}
-p.lead {
-  font-family: $font_serif;
-  font-size: 130%;
-}
+  h1.title, h2.author, h3.date { 
+    text-align: center;
+  }
+  p.lead {
+    font-family: $font_serif;
+    font-size: 130%;
+  }
 
-ol.toc, ul.toc { 
-  padding: 0; 
-  margin:0; 
-  li { 
-    list-style-type: none; 
-    margin: 0; 
+  ol.toc, ul.toc { 
     padding: 0; 
-    line-height: 1.3; 
+    margin:0; 
+    li { 
+      list-style-type: none; 
+      margin: 0; 
+      padding: 0; 
+      line-height: 1.3; 
+    }
+    ol {
+      padding-left: 1em;
+    }
   }
-  ol {
-    padding-left: 1em;
+  .section {
+    margin-bottom: 25pt;
   }
-}
-.section {
-  margin-bottom: 25pt;
-}
+  // page-break-before, page-break-after, page-break-inside are used to control where breaks occur as the content flows from page to page.
+  .page-break-after {
+    page-break-after: always;
+  }
+  h1,h2,h3,h4,h5,p,li {
+    margin-top: 0;
+    margin-bottom: 0.5em;
+  }
+  h1,h2,h3,h4,h5 {
+    // font-family: sans-serif;
+    font-weight: bold;
+    page-break-after: avoid;
+    page-break-inside: avoid;
+    text-align: left;
+  }
+  h1 {
+    border-bottom: 1px solid $gray-9;
+    padding: 0 0 .6em 0;
+    &.title {
+      border: 0;
+    }
+    font-size: 24pt;
+  }
+  h1, h2 { // chapter heads
+    page-break-before: always;
+  }
 
-/* page-break-before, page-break-after, page-break-inside are used to control where breaks occur as the content flows from page to page. */
-.page-break-after {
-  page-break-after: always;
-}
-h1,h2,h3,h4,h5,p,li {
-  margin-top: 0;
-  margin-bottom: 0.5em;
-}
-h1,h2,h3,h4,h5 {
-  // font-family: sans-serif;
-  font-weight: bold;
-  page-break-after: avoid;
-  page-break-inside: avoid;
-  text-align: left;
-}
-h1 {
-  border-bottom: 1px solid $gray-9;
-  padding: 0 0 .6em 0;
-  &.title {
-    border: 0;
+  h3+p, { // h1+p, h2+p, 
+    page-break-before: avoid;
+    // margin-bottom: 1pt;
+  }
+  h2, h3, h4 {
+    font-size: 14pt;
+    margin-top: 25px;
+  }   
+  .headline-4 {
+    font-size: 10pt;
+  }
+  .spaced-out {
+    letter-spacing: 0.2em;
+    text-transform: uppercase;
+  }
+  .subheader {
+    // margin-top: 5pt;
+    margin-bottom: 0;
+    color: $gray-8;
+  }
+  .text-light {
+    font-weight: $font-weight-light;
+  }
+  .text-bold {
+    font-weight: $font-weight-bold;
+  }
+  .no-bullet {
+    list-style-type: none;
+  }
+  // ===== reskinned components ======
+  .callout--gray-light {
+    background-color: black(0.07);
+  }
+  .callout {
+    margin: 1.5em 0; // use em as it might be in a sea of type
+    padding: 1.3em;
+    page-break-inside: avoid;
+  }
+  p {
+    line-height: 1.3;
+    // margin-bottom: 1em;
+  }
+  table, figure {
+    page-break-inside: avoid;
+    // font-family: sans-serif;
+    font-size: smaller;
+  }
+  a:link, a:visited, a {
+    background: transparent;
+    color: #520;
+    font-weight: bold;
+    text-decoration: underline;
+    text-align: left;
+  }
+
+  a {
+    page-break-inside:avoid
+  }
+
+  a[href^=http]:after {
+    content:" <" attr(href) "> ";
+  }
+
+  a:after > img {
+    content: "";
+  }
+
+  article a[href^="#"]:after {
+    content: "";
+  }
+
+  a:not(:local-link):after {
+    content:" <" attr(href) "> ";
+  }
+
+  nav, footer {
+    display: none;
+  }
+  .content-dynamic iframe, ins {
+    display: none;
+    width: 0 !important;
+    height: 0 !important;
+    overflow: hidden !important;
+    line-height: 0pt !important;
+    white-space: nowrap;
+  }
+  .embed-youtube, .embed-responsive, .wistia_responsive_padding {
+    position: absolute;
+    height: 0;
+    overflow: hidden;
+  }
+  .content-dynamic:after {
+    content: "\ All rights reserved. (c) 2019 Datica Health | datica.com";
+    color: #999 !important;
+    font-size: 1em;
+    padding-top: 30px;
+  }
+  p, address, li, dt, dd, blockquote {
+    font-size: 100%
+  }
+  code, pre { font-family: "Courier New", Courier, mono}
+  ul, ol {
+    list-style: square; margin-left: 18pt;
+    margin-bottom: 20pt;    
+  }
+  li {
+    line-height: 1.6em;
   }
 }
-h1, h2 { // chapter heads
-  page-break-before: always;
-}
-
-h3+p, { // h1+p, h2+p, 
-  page-break-before: avoid;
-  // margin-bottom: 1pt;
-}
-.headline-4 {
-  font-size: 10pt;
-}
-.spaced-out {
-  letter-spacing: 0.2em;
-  text-transform: uppercase;
-}
-.subheader {
-  // margin-top: 5pt;
-  margin-bottom: 0;
-  color: $gray-8;
-}
-.text-light {
-  font-weight: $font-weight-light;
-}
-.text-bold {
-  font-weight: $font-weight-bold;
-}
-.no-bullet {
-  list-style-type: none;
-}
-// ===== reskinned components ======
-.callout--gray-light {
-  background-color: black(0.07);
-}
-.callout {
-  margin: 1.5em 0; // use em as it might be in a sea of type
-  padding: 1.3em;
-  page-break-inside: avoid;
-}
-p {
-  line-height: 1.3;
-  // margin-bottom: 1em;
-}
-table, figure {
-  page-break-inside: avoid;
-  // font-family: sans-serif;
-  font-size: smaller;
-}
-@import 'node_modules/foundation-sites/scss/components/_table.scss';
-@include foundation-table;
+// @import 'node_modules/foundation-sites/scss/components/_table.scss';
+// @include foundation-table;
 
 // keep this last
 // @include "pdf.scss"
