Trivial change, just need a netlify poke

--- a/source/assets/scss/modules/type.scss
+++ b/source/assets/scss/modules/type.scss
@@ -141,7 +141,7 @@ footer {
 }
 
 .quote {
-    &--serif { // new style going forward
+    &--serif {
         color: inherit;
         opacity: 0.9;
         font: {
