--- a/source/index.html.slim
+++ b/source/index.html.slim
@@ -53,7 +53,7 @@ section#top.bg-gray-12.container-image-fill.lozad data-background-image=bg_produ
   .section-article
     .row.align-center.group
       .columns.small-12.medium-12.large-9.text-center
-        h4.headline-5.spaced-out news
+        h4.headline-5.spaced-out News
         h1.headline-3.text-light.group <strong>Datica</strong> and <strong>Sansoro Health</strong> merge to help accelerate healthcare’s data-driven future in the cloud.
         = Kramdown::Document.new(data.site.videos['1h4QAhdY3DwWUKCLj6h8i7'].custom_form).to_html
         /ul.menu.align-center.show-for-medium.text-small
