Added sup to (r) in Emissary Pricing

--- a/source/pricing/index.html.slim
+++ b/source/pricing/index.html.slim
@@ -110,7 +110,7 @@ scss:
             /= inline_svg("cmi-logo-dark", class: "icon-size--large product-icon")
           .columns
             h2.headline-4.margin-bottom-small.text-regular
-              a href="/emissary" title="Emissary" Emissary®
+              a href="/emissary" title="Emissary" Emissary<sup>®</sup>
             h4.headline-6.text-regular.nomargin Annual license per site
             p Each unique installation of Emissary constitutes a site, and therefore a new license.
 
