--- a/source/careers/index.html.slim
+++ b/source/careers/index.html.slim
@@ -71,7 +71,7 @@ scss:
         .columns.small-12.medium-10.large-9.text-center
           = inline_svg("map-with-pin", class: "icon-size--xlarge")
           h1.headline-4.spaced-out.text-minty Work at Datica
-          h4.headline-2 We hire the best. Live where you want. <br>Solve hard problems. Help us transform healthcare for the better.
+          h4.headline-2 We hire the best. Solve hard problems.<br>Make a difference. Help us transform healthcare for the better.
           = partial "partials/snippets/button", :locals => { :label => "See open positions", :url => "#jobs", :button_classes => "button button--light", :item_id => "open-positions", :icon => "icon-angle-down", :icon_align => "right" }
 
   section.bg-white.section-article--lg
@@ -84,7 +84,7 @@ scss:
           img.lozad src="https://images.ctfassets.net/189dvqdsjh46/5plPYDbEUhfg7c7WcUf0j/f7c7f6f2089a77eddd9af6164ca637d2/Datica_cities_-_remote.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/1T4yN0IbMwIf43G9mHIF2b/c908b04c35bd79f1d051902d429e208b/Datica_cities_-_cluster.jpg?fm=jpg&fl=progressive&w=800" alt="Datica #remote"
         .columns.small-12.medium-8.large-6
           h3.headline-4 Remote from the ground up.
-          p.lead Datica is a fully remote company, inside and out. Our team is all over the US, with clusters in Denver, San Francisco, Portland, and offices in Madison, WI and Seattle. We are looking for the best people in their fields — no matter where you are.
+          p.lead Based in Minneapolis, Minnesota, the Datica team has clusters in Denver, San Francisco, Portland, Madison, and Seattle. We are looking for the best people in their fields — no matter where you are.
       .row.align-center.align-middle.group--2x
         .columns.small-12.medium-4.large-7
           img.lozad src="https://images.ctfassets.net/189dvqdsjh46/4DdyNoJa6sEDSwhxTxnkNF/e055474ddb03882cdac59c5bf62711ee/Datica_tools_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/cR8cpADTHP4pVZq9J3rnC/cf89b5713ca6557a6d5bc8bf8c68c097/Datica_tools.jpg?fm=jpg&fl=progressive&w=800" alt="Datica Tools"
@@ -93,7 +93,7 @@ scss:
           p.lead We use the latest tools for a modern, distributed workforce, to solve the hard problems of healthcare.
           h4.headline-6.spaced-out Work style
           ul.list-check
-            li Super flexible working hours.
+            li Flexible working hours.
             li Agile development with two week sprints and daily standups.
             li Central communication is done via Slack & Zoom.
             li Full internal transparency, with weekly company virtual meetings.
@@ -107,8 +107,8 @@ scss:
         .columns.small-12.medium-4.large-7
           img.lozad src="https://images.ctfassets.net/189dvqdsjh46/24l7Rg3yevglHqcDulsUew/60929c3e09c158cd7005174909103162/Datica_people_-_preview.svg" data-src="https://images.ctfassets.net/189dvqdsjh46/72WCH5CQFrLboETgfvdaus/48d6a95623b6f9d2d0dea63362cd3e4c/Datica_people.jpg?fm=jpg&fl=progressive&w=800" alt="Datica People"
         .columns.small-12.medium-8.large-5
-          h3.headline-4 Decent folk who work hard and care about each other. 
-          p.lead Relationships matter. We build trust with each other online and off. Daticans try to get together once a year or so, and more frequently in regional teams. We believe people do their best work when they're taken care of and work in a positive environment. 
+          h3.headline-4 We work hard and care about each other. 
+          p.lead Relationships matter. We build trust with each other online and off. Daticans try to get together once a year or so, and more frequently in regional teams. We believe people do their best work when they're taken care of, and work in a positive environment. 
           h4.headline-6.spaced-out Benefits
           ul.list-check
             li Medical and Dental Plan, Datica covers 100% of single premiums, and the majority of premiums for family coverage.
