Updated Careers contact.

--- a/source/careers/index.html.slim
+++ b/source/careers/index.html.slim
@@ -127,7 +127,7 @@ scss:
     .row.align-center.align-middle
       .columns.small-12.medium-6
         h3.headline-2.text-bold.text-minty Open Positions
-        p.lead Datica is always looking for talented new team members who are looking for tough challenges. If you are curious about career opportunities with Datica, please email Maggie Ostrowski at <a href="mailto:maggie@datica.com">maggie@datica.com</a>.
+        p.lead Datica is always looking for talented new team members who are looking for tough challenges. If you are curious about career opportunities with Datica, please email <a href="mailto:nikki.kent@sansorohealth.com">Nikki Kent</a>.
       .columns.small-12.medium-6
         | <div id="BambooHR" class="group"><script src="//datica.bamboohr.com/js/jobs2.php" type="text/javascript"></script><div id="BambooHR-Footer">Powered by<a href="http://www.bamboohr.com" target="_blank" rel="external"><img src="//www.bamboohr.com/img/footer-logo.png" alt="BambooHR - HR software"/></a></div></div>
         p.text-small.text-italic Note: the positions listed show locations because of the way our HR software works. All positions are indeed remote. =)
