Removing motion-ui library

--- a/source/assets/scss/seldon.scss
+++ b/source/assets/scss/seldon.scss
@@ -4,7 +4,7 @@
 // // We want the uncompiled sass, so that we can leverage the settings files.
 // @import 'node_modules/foundation-sites/scss/util/_mixins.scss';
 @import 'node_modules/foundation-sites/scss/foundation.scss';
-@import 'node_modules/motion-ui/src/motion-ui';
+// @import 'node_modules/motion-ui/src/motion-ui';
 @include foundation-global-styles;
 // @include foundation-grid;
 @include foundation-flex-grid;
