--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -140,7 +140,7 @@ $gray-list-short: (
 
 // Datica Colors
 $color_blue:             hsl(219, 94%, 48%);
-$color_green:            hsl(158, 100%, 34%); //hsl(150, 85%, 39%); // hsl(160, 100%, 34%);
+$color_green:            #049873;//hsl(158, 100%, 34%); //hsl(150, 85%, 39%); // hsl(160, 100%, 34%);
 $color_shadow:           #DCE4E9;
 $color_highlight-yellow: #FEDB45;
 $color_yellow:           $color_highlight-yellow;
@@ -179,7 +179,7 @@ $color-slugs: (
 $color_magenta-glow: hsl(328, 100%, 69%);
 $color_orange-glow:  hsl(37, 100%, 67%);
 $color_yellow-glow:  hsl(57, 100%, 72%);
-$color_green-glow:   hsl(107, 100%, 70%);
+$color_green-glow:   #26DF91; //hsl(107, 100%, 70%);
 $color_aqua-glow:    hsl(175, 100%, 62%);
 $color_blue-glow:    hsl(192, 100%, 58%);
 $color_neon-purple:  #C41BF1;
