--- a/source/contact/thanks.html.erb
+++ b/source/contact/thanks.html.erb
@@ -22,11 +22,11 @@ asset_preload: '<link href="https://js.hsforms.net/forms/v2.js" rel="preload" as
                     <div class="card-section">
                         <h4 class="headline-4 spaced-out">Next Up:</h4>
                         <ul class="no-bullet">
-                            <li><a class="" href="/about" title="Learn more">About Datica <i class="fa fa-angle-right"></i></a></li>
-                            <li><a class="" href="/blog" title="Learn more">Company blog <i class="fa fa-angle-right"></i></a></li>
-                            <li><a class="" href="/innovation" title="Learn more">Healthcare Innovators Podcast <i class="fa fa-angle-right"></i></a></li>
-                            <li><a class="" href="https://datica.com/open-source/policies" title="Learn more">Our open sourced company policies on GitHub <i class="fa fa-angle-right"></i></a></li>
-                            <li><a class="" href="https://help.datica.com/hc/en-us" title="Learn more">Customer support channels <i class="fa fa-angle-right"></i></a></li>
+                            <li><a class="" href="/about" title="Learn more">About Datica</i></a></li>
+                            <li><a class="" href="/blog" title="Learn more">Company blog</i></a></li>
+                            <li><a class="" href="/innovation" title="Learn more">See how Datica innovates</a></li>
+                            <li><a class="" href="https://datica.com/open-source/policies" title="Learn more">Our open sourced company policies on GitHub</a></li>
+                            <li><a class="" href="https://help.datica.com/hc/en-us" title="Learn more">Customer support channels</a></li>
                         </ul>
                     </div>
                 </div>
