--- a/source/about/partials/_social-links.erb
+++ b/source/about/partials/_social-links.erb
@@ -4,12 +4,11 @@ unless defined?(datican) && datican == true
 end
 %>
 
-<% if entry.has_key?("email") && datican == true %>
-    <li><a href="mailto: <%= entry["email"]%>" title="Connect with <%= entry["fullname"]%> via Email"><i class="fa fa-envelope"></i> <%= entry["email"]%></a></li>
-<% end %>
+
 <% if entry.has_key?("profile_twitter") %>
-    <li><a href="http://twitter.com/<%= entry["profile_twitter"]%>" title="Connect with <%= entry["fullname"]%> via Twitter"><i class="fa fa-twitter"></i> @<%= entry["profile_twitter"]%></a></li>
+    <li><a href="http://twitter.com/<%= entry["profile_twitter"]%>" title="Connect with <%= entry["fullname"]%> via Twitter"><%= inline_svg("small/icon-ui-twitter", class: "icon-inline") %> @<%= entry["profile_twitter"]%></a></li>
 <% end %>
 <% if entry.has_key?("profile_linkedin") %>
-    <li><a href="http://linkedin.com/in/<%= entry["profile_linkedin"] %>" title="Connect with <%= entry["fullname"] %> via Linkedin"><i class="fa fa-linkedin"></i> LinkedIn</a></li>
+    <li><a href="http://linkedin.com/in/<%= entry["profile_linkedin"] %>" title="Connect with <%= entry["fullname"] %> via Linkedin"><%= inline_svg("small/icon-ui-linkedin", class: "icon-inline") %> LinkedIn</a></li>
 <% end %>
+
