Converting all blue links to green
WIP, need a darker green or alternate styling to make the links more visible. Blue really popped before.

--- a/source/assets/scss/modules/buttons.scss
+++ b/source/assets/scss/modules/buttons.scss
@@ -207,7 +207,7 @@
             }
         }
         a {
-            @include link-colors (black, $color_blue, false);
+            @include link-colors (black, $color_prime, false);
         }
     }
 }
