--- a/source/assets/scss/modules/type.scss
+++ b/source/assets/scss/modules/type.scss
@@ -129,8 +129,8 @@ footer {
         }
         a:hover {
             opacity: 1;
-            color: $color_blue;
-            border-bottom: 1px solid transparentize($color_blue, 0.2);
+            color: $color_prime;
+            border-bottom: 1px solid transparentize($color_prime, 0.2);
         }
     }
     a.nav-logo--link {
