--- a/source/assets/scss/views/academy-detail.scss
+++ b/source/assets/scss/views/academy-detail.scss
@@ -17,7 +17,7 @@
         font-family:  $font_sans;
         font-size:    104%;
         font-style:   italic;
-        border-left:  6px solid transparentize($color_blue, 0.8);
+        border-left:  6px solid transparentize($color_prime, 0.8);
         margin-left:  -1.5rem;
         padding-left: 1rem;
         line-height:  1.5;
