--- a/source/assets/scss/views/ribbon.scss
+++ b/source/assets/scss/views/ribbon.scss
@@ -67,6 +67,6 @@
 .close-button {
     transition: color $timing-default linear;
     &:hover {
-        color: $color_blue-glow;
+        color: $color_prime-bright;
     }
 }
