--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -145,9 +145,9 @@ $color_shadow:           #DCE4E9;
 $color_highlight-yellow: #FEDB45;
 $color_yellow:           $color_highlight-yellow;
 $color_red:              hsl(349, 72%, 39%); // cool darker red
-$color_deep:             #010101;
-$color_deep-alt:         #1E2127;
-$color_prime:            hsl(235, 88%, 51%);
+$color_deep:             $gray-2;
+$color_deep-alt:         $gray-2;
+$color_prime:            $color_green; //hsl(235, 88%, 51%);
 $color_prime-alt:        $color_blue;
 $color_product:          #426788;
 $color_product-alt:      #6C93B5;
@@ -189,13 +189,16 @@ $color_ccms-bright:  hsl(272, 100%, 76%); // product colors
 $color_ccms-dark:    hsl(267, 92%, 44%);
 //$color_blue-bright:  hsl(220, 100%, 53%);
 
+$color_prime-bright: $color_green-glow; // core app bright color
+
 // needs 2019 update
 $product-colors: (
     cks: #9A0BFF,
     cmi: #6E52FF,
     cpaas: #498CFF,
     ccms-bright: $color_ccms-bright,
-    ccms-dark: $color_ccms-dark
+    ccms-dark: $color_ccms-dark,
+    emissary: $color_green
 );
 
 // future dark, saturated gradients
@@ -210,8 +213,8 @@ $product-colors: (
 
 // Foundation Color Settings
 $foundation-palette:(
-  default:   $color_prime-alt,
-  primary:   $color_prime-alt,
+  default:   $color_green,
+  primary:   $color_green,
   secondary: $gray-5,
   tertiary:  white,
   dark:      $gray-2,
@@ -240,12 +243,12 @@ $fill-color-list: (
     "magenta-glow": hsl(328, 100%, 69%),
     "orange-glow":  hsl(37, 100%, 67%),
     "yellow-glow":  hsl(57, 100%, 72%),
-    "green-glow":   hsl(127, 100%, 70%),
+    "green-glow":   $color_green-glow,
     "aqua-glow":    hsl(175, 100%, 62%),
     "blue-glow":    hsl(192, 100%, 58%),
     "purple-deep":  hsl(236, 27%, 26%),
     "blue-bright":  hsl(220, 100%, 53%),
-    "brand":        $color_prime,
+    "brand":        $color_green,
     "blue":         $color_prime-alt,
     "red":          $color_service,
     "green":        adjust-color($color_green, $hue: -5, $saturation: 40%, $lightness: -5%),
