Redoing anchor styling, more green stuff.

--- a/source/assets/scss/modules/components.scss
+++ b/source/assets/scss/modules/components.scss
@@ -271,9 +271,9 @@ span.label + span.label { // when in a tag list
         opacity: 0.6;
         font-weight: $font-weight-light;
     }
-    &-icon {
+    // &-icon {
 
-    }
+    // }
 }
 // expand/toggle component - moved from products.scss
 .icon-toggle {
