--- a/source/assets/scss/modules/links.scss
+++ b/source/assets/scss/modules/links.scss
@@ -9,9 +9,9 @@ a {
     // @include easing($timing-default);
 }
 // for the link--[color] styles, these have moved to overrides.scss, because order-of-ops.
-section a {
-    font-weight: $font-weight-mid;
-}
+// section a {
+//     font-weight: $font-weight-mid;
+// }
 // note that containers.scss:211 currently loads after this file; 
 // there are basic link style overrides per container colors (at least for grays)
 
