--- a/source/assets/scss/modules/nav.scss
+++ b/source/assets/scss/modules/nav.scss
@@ -53,11 +53,11 @@ $duration: $timing-default * 1.5; //settings.scss:281
         li a {
             font: {
                 size: 90%;
-                // weight: $font-weight-mid;
+                weight: $font-weight-mid;
             }
             &[aria-current="page"] {
                 color: $gray-1;
-                border-bottom: 3px solid $color_prime;
+                border-bottom: 3px solid $color_green-dark;
             }
         }
         ul.breadcrumbs { // breadcrumbs inside subnav, usually first li
@@ -104,7 +104,7 @@ $duration: $timing-default * 1.5; //settings.scss:281
                     color: white;
                 }
                 &.is-active, [aria-current="page"] { // js-applied state by ZF plugins
-                    border-color: $color_prime-alt;
+                    border-color: $color_prime-dark;
                 }
             }
             &--cta { // for cta button in sticky nav bar
@@ -386,7 +386,7 @@ $duration: $timing-default * 1.5; //settings.scss:281
             li.nav__item {
                 &:hover {
                     & > a:not(.button) { // selected state of button/pane
-                        color: $color_prime;
+                        color: $color_green-dark;
                     }
                 }
             }
