--- a/source/assets/scss/settings.scss
+++ b/source/assets/scss/settings.scss
@@ -140,7 +140,9 @@ $gray-list-short: (
 
 // Datica Colors
 $color_blue:             hsl(219, 94%, 48%);
-$color_green:            #049873;//hsl(158, 100%, 34%); //hsl(150, 85%, 39%); // hsl(160, 100%, 34%);
+$color_green:            hsl(160, 100%, 34%);//#009b57; hsl(158, 100%, 34%); //hsl(150, 85%, 39%); // ;
+$color_green-bright:     hsl(157, 100%, 55%);
+$color_green-dark:       hsl(164, 100%, 25%);
 $color_shadow:           #DCE4E9;
 $color_highlight-yellow: #FEDB45;
 $color_yellow:           $color_highlight-yellow;
@@ -179,7 +181,7 @@ $color-slugs: (
 $color_magenta-glow: hsl(328, 100%, 69%);
 $color_orange-glow:  hsl(37, 100%, 67%);
 $color_yellow-glow:  hsl(57, 100%, 72%);
-$color_green-glow:   #26DF91; //hsl(107, 100%, 70%);
+$color_green-glow:   $color_green-bright; // #26DF91; //hsl(107, 100%, 70%);
 $color_aqua-glow:    hsl(175, 100%, 62%);
 $color_blue-glow:    hsl(192, 100%, 58%);
 $color_neon-purple:  #C41BF1;
@@ -395,8 +397,8 @@ $code-font-weight: $global-weight-normal;
 $code-background: initial; //transparentize($gray-5, 0.5);//hsla(219, 100%, 52%, 0.2);
 $code-border: none; //1px solid $medium-gray;
 $code-padding: rem-calc(2 5 1);
-$anchor-color: $primary-color;
-$anchor-color-hover: scale-color($anchor-color, $lightness: -14%);
+$anchor-color: scale-color($color_prime, $lightness: -14%);;
+$anchor-color-hover: scale-color($anchor-color, $lightness: 10%);
 $anchor-text-decoration: none;
 $anchor-text-decoration-hover: underline;
 $hr-width: $global-width - $pad;
