--- a/source/blog/partials/_blog-subscription-simple.erb
+++ b/source/blog/partials/_blog-subscription-simple.erb
@@ -10,19 +10,19 @@ if defined?(color)
         iconcolor = 'white'
     when 'white'
         colorclass = 'container-color--white drop'
-        buttonstyle = 'button--primary'
+        buttonstyle = 'button primary'
         iconcolor = 'gray-9'
     when 'gray', 'light'
         colorclass = 'container-gray-11'
-        buttonstyle = 'button--primary'
+        buttonstyle = 'button primary'
         iconcolor = 'gray-9'
     # when 'dark', 'dark-gray'
     #   colorclass = color_default
-    #   buttonstyle = 'button--primary'
+    #   buttonstyle = 'button primary'
     #   iconcolor = 'gray-5'
     else
         colorclass = color_default
-        buttonstyle = 'button--primary'
+        buttonstyle = 'button primary'
         iconcolor = 'gray-5'
     end
 else
