--- a/source/assets/scss/modules/links.scss
+++ b/source/assets/scss/modules/links.scss
@@ -3,8 +3,7 @@
 a {
     text-decoration: none;
     font-weight: $font-weight-mid;
-	transition-property: background-color, color;
-	transition-duration: $timing-default;
+	transition: transform $timing-default ease, box-shadow $timing-default, background-color $timing-default, color $timing-default, border $timing-default;
     &:hover, &:active, &:focus {text-decoration: none; }
     // @include easing($timing-default);
 }
