--- a/source/assets/scss/modules/nav.scss
+++ b/source/assets/scss/modules/nav.scss
@@ -104,7 +104,7 @@ $duration: $timing-default * 1.5; //settings.scss:281
                     color: white;
                 }
                 &.is-active, [aria-current="page"] { // js-applied state by ZF plugins
-                    border-color: $color_prime-dark;
+                    border-color: $color_green-dark;
                 }
             }
             &--cta { // for cta button in sticky nav bar
