--- a/source/contentful_templates/blog.html.slim
+++ b/source/contentful_templates/blog.html.slim
@@ -82,7 +82,7 @@ ruby:
             = partial("partials/snippets/person", :locals => { :p => p["author"] })
         = partial "/partials/snippets/share", :locals => { :p => p, :classes => "show-for-xlarge vertical" }
         - if p.has_key?("blog_lead")
-          #postLead.lead= Kramdown::Document.new(p["blog_lead"]).to_html
+          #postLead.lead.content-dynamic = Kramdown::Document.new(p["blog_lead"]).to_html
         .content-dynamic.group
           - if p.has_key?("featured_person")
             = partial("partials/snippets/person-vertical-simple", :locals => { :p => p["featured_person"], :classes => "float-right-on-medium" })
